# StackLang

./: CMakeLists.txt  Cargo.toml  main.py  test.sl  test.stack
src/: Common.hpp  Compilation.cpp  Compilation.hpp  Execution.cpp  Execution.hpp  Lexer.cpp  Lexer.hpp  Main.cpp  Ops.cpp  Ops.hpp  Token.cpp  Token.hpp  Types.cpp  Types.hpp  common.odin  compilation.odin  execution.odin  lexer.odin  lib.rs  main.odin  ops.odin  ops.rs  parser.rs  token.odin  types.odin  types.rs  value.rs
